--- a/notification-service/notification_service/src/main/resources/application.properties
+++ b/notification-service/notification_service/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.application.name=notification_service
 # === Spring Mail Configuration ===
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=sanjeetkumar2871997@gmail.com
-spring.mail.password=vasp xegi ztla zzyj
+spring.mail.username=your_email
+spring.mail.password=your_email_app_password
 
 # Enable authentication and STARTTLS
 spring.mail.properties.mail.smtp.auth=true
